HelloUltraviolet/Fixtures/RejectedSource/Comptime/DeriveMissingRequiredClass/Expected.uv
//! Expected diagnostic metadata for the DeriveMissingRequiredClass rejected-source specimen.

expectedDiagnostic("E-CTE-0330", "requirement.22.DeriveRequiresValidation")
